# prngtest

./: .pre-commit-config.yaml  .readthedocs.yml  conf.py  index.rst  prngtest.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
tests/: conftest.py  constants.py  test_algos.py  test_checks.py  test_cli.py  test_examples.py  test_smoke.py  test_validation.py
