[tool.poetry]
name = "prngtest"
version = "0.0.1"
description = "RNG testing CLI and library"
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]
repository = "https://github.com/honno/prngtest"
packages = [{include = "prngtest.py"}]
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
bitarray = "^2.2.4"
scipy = "1.5.4"  # TODO: don't pin a single version
numpy = "^1.21.1"
Sphinx = {version = "^4.4.0", optional = true}

[tool.poetry.extras]
# https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
docs = ["Sphinx"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.13.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
